# analise-credito-ml

./: .gitignore  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
api/: main.py  schemas.py
app/: streamlit_app.py
models/: decision_tree.joblib  preprocessor.joblib  xgboost.joblib
notebooks/: 01_eda_and_modeling.ipynb
src/: data_processing.py  evaluate.py  predict.py  train.py
tests/: test_pipeline.py
