[tool.uv]
package = true

[project]
name = "analise-credito-ml"
version = "0.1.0"
description = "Sistema de predição de crédito com machine learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "llvmlite>=0.39.0",
    "mlflow>=3.11.1",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.44.0",
    "streamlit>=1.56.0",
    "uvicorn>=0.45.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "pytest-html>=4.2.0",
    "ruff>=0.15.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "api*", "app*"]
